tests/neg/semantic_warn_signed_unsigned_compare.baa
// FLAGS: -Wall -Werror
// EXPECT: [Error]
// EXPECT: [-Wsigned-unsigned-compare]
// EXPECT: مقارنة بين نوع موقّع وغير موقّع
صحيح الرئيسية() {
    ص٣٢ موقّع = -١.
    ط٣٢ غير_موقّع = ١.
    إذا (موقّع < غير_موقّع) {
        إرجع ١.
    }
    إرجع ٠.
}
